--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "private-network": "ganache-cli --time 1970-01-01T00:00:00Z",
     "test": "truffle test",
     "compile": "truffle compile",
-    "deploy": "truffle test --network kovan test/deploy.js",
+    "flashLoanTest": "truffle --network kovan testScripts/flashLoanTest.js",
+    "kyberTest": "truffle test ./testScripts/kyberInteractionTest.js --network ropsten",
     "validate-js": "eslint *.js test/*.js test/helpers/*.js --fix",
     "validate-sol": "solium --dir contracts --fix"
   },
