--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "compile": "truffle compile",
     "flashLoanTest": "truffle --network kovan testScripts/flashLoanTest.js",
     "kyberTest": "truffle test ./testScripts/kyberInteractionTest.js --network ropsten",
+    "arbitrageTest": "node ./arbitrageBot.js",
     "validate-js": "eslint *.js test/*.js test/helpers/*.js --fix",
     "validate-sol": "solium --dir contracts --fix"
   },
@@ -23,6 +24,8 @@
     "dotenv": "^8.1.0",
     "eslint-config-google": "^0.14.0",
     "ganache-cli": "^6.7.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
     "truffle": "^5.1.20",
     "truffle-assertions": "^0.9.2",
     "truffle-flattener": "^1.4.2",
