--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-INFURA_API_KEY=<infura API key>
-PRIVATEKEY1=<your private key to deploy contract from, should be in kovan with some eth on it>
+INFURA_API_KEY=<your infura api key here>
+PRIVATEKEY1=<your private key here>
